12.02.2025
- nowy unit E80
- poprawki dla GRAPH_ATARI.INC (LineTo), wartość RMARGN zostaje zachowana

06.02.2025
- INC/DEC striped array, absolute array optimization

28.01.2025
- poprawione moduły RMT, SAPLZSS
- poprawiony plik base/atari/RESOURCE.ASM
- dodany zasób RMTPLAY2, umożliwia ładowanie playera RMT pod ROM

23.01.2025
- optymalizacje, opt_TEMP_TAIL_IF, opt_TEMP_TAIL_CASE

19.01.2025
- optimizations

15.01.2025
- recursion in object fixed

14.01.2025
- optimizations

11.01.2025
- bugfixes

08.01.2025
- external alias fix

07.01.2025
- array ABSOLUTE bugfixes
- optimizations

04.01.2025
- zasób XBMP wymaga teraz podania numeru palety (wcześniej domyślnie była wybierana paleta #1)

03.01.2025
- poprawiony odczyt pliku HEA dla etykiet EXTERNAL
- base/atari/@vbxe_cmap.asm
- VBXE: SetColorMapEntry

01.01.2025
- poprawiona alokocja pamieci dla tablic bez podanego rozmiaru (open array)

28.12.2024
- dla tablic [0..0] nie jest wymuszany wstępnie 'ABSOLUTE $0000', taka tablica nie jest alokowana w pamięci, zostaje zapisany tylko wskaźnik do takiej tablicy
- optymalizacja szybkości dostepu do duzych tablic ABSOLUTE z liczbą elementów przekraczajaca 255 elementow

16.12.2024
- C flag optimization

11.12.2024
- SYSTEM.PAS: SQRT(single), SQRT(float16) szybsza i większa precyzja obliczeń

01.12.2024
- opt_TEMP_BOOLEAN_OR.inc

28.10.2024
- unit: dodana możliwość użycia bloku begin-end alternatywnie do initialization-end

03.10.2024
- Optimize.pas (rebuild) bugfixes

02.10.2024
- Optimize.pas (Rebuild) optymalizacja -> Continue

30.09.2024
- Optimize.pas (ElfHash), szybsze porównania stringów

12.09.2024
- CompileSimplesExpression -> (VarType in SignedOrdinalTypes + [BOOLEANTOK, REALTOK, HALFSINGLETOK, SINGLETOK])

27.08.2024
- Optimize.pas (Rebuild) bugfixes
- 'for in' bugfixes

22.08.2024
- bugfixes

19.08.2024
- nowy unit FP, float-point OS

14.08.2024
- optymalizacja Optimize.pas -> Rebuild (50% szybsza kompilacja dla math/rijndael-test.pas)

21.07.2024